nornir.log
2026-02-27 12:37:56,093 -  nornir.core -     INFO -        run() - Running task 'load_vars' with args {} on 2 hosts
2026-02-27 12:41:57,775 -  nornir.core -     INFO -        run() - Running task 'load_vars' with args {} on 2 hosts
2026-02-27 12:41:57,778 -  nornir.core -     INFO -        run() - Running task 'generate_config' with args {} on 2 hosts
2026-02-27 12:41:57,784 - nornir.core.task -    ERROR -      start() - Host 'R2': task 'template_file' failed with traceback:
Traceback (most recent call last):
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir/core/task.py", line 98, in start
    r = self.task(self, **self.params)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir_jinja2/plugins/tasks/template_file.py", line 42, in template_file
    t = env.get_template(template)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "templates/ospf.j2", line 1, in template
    {% if host.vars.OSPF is defined}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}'

2026-02-27 12:41:57,785 - nornir.core.task -    ERROR -      start() - Host 'R1': task 'template_file' failed with traceback:
Traceback (most recent call last):
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir/core/task.py", line 98, in start
    r = self.task(self, **self.params)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir_jinja2/plugins/tasks/template_file.py", line 42, in template_file
    t = env.get_template(template)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 1016, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 975, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 771, in compile
    self.handle_exception(source=source_hint)
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/jinja2/environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "templates/ospf.j2", line 1, in template
    {% if host.vars.OSPF is defined}
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}'

2026-02-27 12:41:57,785 - nornir.core.task -    ERROR -      start() - Host 'R2': task 'generate_config' failed with traceback:
Traceback (most recent call last):
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir/core/task.py", line 98, in start
    r = self.task(self, **self.params)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/script1.py", line 16, in generate_config
    ospf_template = task.run(task=template_file, template="ospf.j2", path="./templates")
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir/core/task.py", line 173, in run
    raise NornirSubTaskError(task=run_task, result=r)
nornir.core.exceptions.NornirSubTaskError: Subtask: template_file (failed)


2026-02-27 12:41:57,786 - nornir.core.task -    ERROR -      start() - Host 'R1': task 'generate_config' failed with traceback:
Traceback (most recent call last):
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir/core/task.py", line 98, in start
    r = self.task(self, **self.params)
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/script1.py", line 16, in generate_config
    ospf_template = task.run(task=template_file, template="ospf.j2", path="./templates")
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/jcs/automation/.venv/lib/python3.12/site-packages/nornir/core/task.py", line 173, in run
    raise NornirSubTaskError(task=run_task, result=r)
nornir.core.exceptions.NornirSubTaskError: Subtask: template_file (failed)


